--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .bg {
-  background: url(/images/pancake.jpg);
+  background: url(images/pancake.jpg);
   background-repeat: no-repeat center center/cover;
   position: absolute;
   top: -30px;
